FIX: changes scrollbar broder based on background (#1046)

--- a/assets/stylesheets/common/chat-browse.scss
+++ b/assets/stylesheets/common/chat-browse.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: calc(100vh - var(--header-offset));
   overflow-y: scroll;
-  @include chat-scrollbar;
+  @include chat-scrollbar(var(--secondary));
 
   &__title {
     box-sizing: border-box;
