--- a/assets/stylesheets/mixins/chat-scrollbar.scss
+++ b/assets/stylesheets/mixins/chat-scrollbar.scss
@@ -1,22 +1,25 @@
-@mixin chat-scrollbar {
-  scrollbar-color: var(--primary-low) transparent;
-  transition: scrollbar-color 0.2s ease-in-out;
+@mixin chat-scrollbar($border: var(--primary-very-low)) {
+  --scrollbarBg: transparent;
+  --scrollbarThumbBg: var(--primary-low);
+  --scrollbarWidth: 1.2em;
 
-  &::-webkit-scrollbar {
-    width: 12px;
-  }
+  scrollbar-color: transparent var(--scrollbarBg);
+  transition: scrollbar-color 0.25s ease-in-out;
+  transition-delay: 0.5s;
+
   &::-webkit-scrollbar-thumb {
-    background: var(--primary-low);
-    border-radius: 8px;
-    border: 3px solid var(--secondary);
-  }
-  &::-webkit-scrollbar-track {
     background-color: transparent;
+    border-radius: calc(var(--scrollbarWidth) / 2);
+    border: calc(var(--scrollbarWidth) / 4) solid $border;
   }
   &:hover {
-    scrollbar-color: var(--primary-low-mid) transparent;
+    scrollbar-color: var(--scrollbarThumbBg) var(--scrollbarBg);
     &::-webkit-scrollbar-thumb {
-      background: var(--primary-low-mid);
+      background-color: var(--scrollbarThumbBg);
     }
+    transition-delay: 0s;
+  }
+  &::-webkit-scrollbar {
+    width: var(--scrollbarWidth);
   }
 }
